# wayward

./: AUTHORS  COPYING  Makefile.am  autogen.sh  configure.ac
source/shared/: Makefile.am
source/source/: Makefile.am  build.sh  config.h  shell-helper.c  wayward-lsdesktopf
